# libcsearch

./: .gitignore  Makefile.am  README.md  configure.ac
examples/: 15-puzzle.c  8-puzzle-cpp.cc  8-puzzle-generic.c  8-puzzle.c  Makefile.am  build-profile-bin.sh  build-profile-stats.sh  pathfinding.c
src/: Makefile.am  astar.c  best-first-search.c  bfs.c  breadth-first-search.c  csearch.h  depth-first-search.c  dijkstra.c  gsearch.h  heuristics.c  heuristics.h  list.c  list.h  successors-private.h  successors.c
tests/: 15-puzzle.c  8-puzzle-generic.c  8-puzzle.c  Makefile.am  pathfinding.c  perf-record-samples.sh
