
# Add new files in alphabetical order. Thanks.
libgsearch_src = astar.c bfs.c dijkstra.c

# Add new files in alphabetical order. Thanks.
libgsearch_headers = gsearch.h

library_includedir      = $(includedir)/libgsearch/
library_include_HEADERS = $(libgsearch_headers)

# Library
lib_LTLIBRARIES                           = $(top_builddir)/lib/libgsearch.la 
__top_builddir__lib_libgsearch_la_SOURCES = $(libgsearch_src)

